--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ layout: index
 	{% endif %}
 	<article>
 		<h1><a href="{{post.url}}">{{post.title}}</a></h1>
+		{{post.content | truncatewords:100}}
+		<p><a href="{{post.url}}">Read all of {{post.title}}</a></p>
 	</article>
 {% endfor %}
 
